--- a/crunch/templates/game.html
+++ b/crunch/templates/game.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess Game</title>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <title>Шахматы</title>
 </head>
 <body>
-    <h1>Chess Game</h1>
+    <h1>Игра</h1>
     <div id="game-board"></div>
-    <button onclick="startGame()">Start Game</button>
+    <button id="startGame">Начать игру</button>
+    <script src="../static/script.js"></script>
 </body>
 </html>
