--- a/crunch/templates/index.html
+++ b/crunch/templates/index.html
@@ -6,7 +6,7 @@
     <title>Шахматы</title>
 </head>
 <body>
-    <h1>Добро пожаловать в шахматы!</h1>
+    <h1>Давайте в шахматы!</h1>
     <a href="./game.html">Начать игру</a> | <a href="./puzzles.html">Решать задачи</a>
 </body>
 </html>
