--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 header {
     background: #333;
     color: #fff;
-    padding: 10px 0;
+    padding: 10px;
     text-align: center;
 }
 
@@ -39,4 +39,34 @@ footer {
     position: absolute;
     width: 100%;
     bottom: 0;
+}
+button {
+    padding: 10px 20px; /* внутренние отступы кнопок*/
+    font-size: 16px; /* размер шрифта*/
+	background-color: #4CAF50; /* зеленый фончик у кнопочки */
+	color: white; /* белыми стали буквы(текст) */
+    border: none; /* убрала рамку */
+    border-radius: 5px; /* скруглила углы */
+    cursor: pointer; /* прикол с курсором при наведении */
+	/*position absolute;*/
+}
+
+button:hover {
+    background-color: #45a049; /* кнопочка темнеет при наведении */
+}
+.button-zagl{
+	position :absolute;
+	left: 20px; /* прописала отступ слева */
+    top: 100px; /* прописала отступ сверху */
+}
+.btn{
+	padding: 10px 20px; /* внутренние отступы кнопок*/
+    font-size: 16px; /* размер шрифта*/
+	background-color: #4CAF50; /* зеленый фончик у кнопочки */
+	color: white; /* белыми стали буквы(текст) */
+    border: none; /* убрала рамку */
+    border-radius: 5px; /* скруглила углы */
+    cursor: pointer; /* прикол с курсором при наведении */
+	text-decoration: none;/* убрала подчёркивание */
+	/*position absolute;*/
 }
