--- a/style.css
+++ b/style.css
@@ -30,11 +30,21 @@ nav ul li {
     margin: 0 15px; 
 }
 
+
 main {
     flex: 1; /* Заполнение оставшегося пространства */
+    display: flex; /* Включаем Flexbox для main */
+    justify-content: center; /* Центрируем содержимое по горизонтали */
+    align-items: center; /* Центрируем содержимое по вертикали */
     padding: 20px;
-    text-align: center;
     background-color: #4CAF50; /* Зелёный фон для основного */
+	text-align: center;
+}
+
+/* Дополнительно, если нужно, чтобы изображение не было слишком большим для экрана */
+img {
+    max-width: 100%; /* Установка максимальной ширины изображения */
+    height: auto; /* Автоматическое изменение высоты в соответствии с шириной */
 }
 
 footer {
